# wememoir

./: .gitignore  LICENSE  README.md  pyproject.toml  venv_install2.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
data/: imported.json
docs/: export-guide.md  privacy.md  privacy_faq.md
examples/: mom_sample.jsonl  sample_chat.csv  sample_chat.json  sample_chat.txt
tests/: test_bot_prompt.py  test_cleaner.py  test_cli.py  test_importers.py  test_memoir.py  test_mom_profile.py  test_raw_preserve.py  test_skill_builder.py  test_windows_detector.py
wememoir/: cli.py  models.py
wememoir/cleaners/: __init__.py  dedupe.py  dialogue_cleaner.py  filler_rules.py
wememoir/exporters/: __init__.py  json_exporter.py  markdown_exporter.py
wememoir/importers/: __init__.py  csv_importer.py  html_importer.py  json_importer.py  jsonl_importer.py  txt_importer.py
wememoir/memoir/: __init__.py  chapter_builder.py  highlights.py  memoir_writer.py  timeline.py
wememoir/mom_bot/: __init__.py  bot_builder.py  chat_server.py  memory_mapper.py  phrase_extractor.py  prompt_builder.py  response_patterns.py  voice_analyzer.py
wememoir/skills/: __init__.py  skill_builder.py
wememoir/skills/templates/: codex_agents.md  contact_skill.md  cursor_rule.mdc  memoir_skill.md  self_skill.md
wememoir/web/: app.py
wememoir/windows_wechat/: __init__.py  account_finder.py  adapter_base.py  chatlog_studio_adapter.py  detector.py  export_wizard.py  wechat_cli_adapter.py
(+2 files in other folders)
