[project]
name = "wememoir"
version = "0.1.0"
description = "本地优先的微信聊天记录整理与回忆录生成工具"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "flask>=2.0",
    "python-dateutil>=2.8",
    "beautifulsoup4>=4.10",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
wememoir = "wememoir.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["wememoir*"]
