[project]
name = "wememoir"
version = "0.2.0"
description = "Local-first WeChat chat exporter and mom-style comfort bot generator"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "flask>=2.0",
    "python-dateutil>=2.8",
    "beautifulsoup4>=4.10",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
wememoir = "wememoir.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["wememoir*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
